<resources>
    <string name="app_name">AppAgua</string>
    <string name="hint_peso">Seu Peso (Kg)</string>
    <string name="hint_idade">Sua idade</string>
    <string name="text_button_calcular">Calcular Ingestão Diária</string>
    <string name="txt_button_lembrete">Lembrete</string>
    <string name="txt_button_alarme">Alarme</string>
    <string name="txt_hora">00</string>
    <string name="txt_dois_pontos">:</string>
    <string name="txt_min">00</string>
    <string name="toast_informe_peso">Informe seu peso!</string>
    <string name="toast_informe_idade">Informe sua Idade!</string>
    <string name="dialog_titulo">"Redefinir Dados"</string>
    <string name="dialog_descricao">"Deseja excluir todos os dados existentes?"</string>
    <string name="alarm_message">"Hora de Beber água!</string>
</resources>