<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    
    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/bebaagua"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@id/container_header"
        app:layout_constraintStart_toEndOf="@id/container_header"
        android:layout_marginStart="20dp"/>

    <ImageView
        android:id="@+id/ic_redefinir"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:src="@drawable/ic__refresh"
        app:layout_constraintTop_toTopOf="@id/container_header"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/et_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_peso"
        android:textColorHint="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:padding="15dp"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/et_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_idade"
        android:textColorHint="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_peso"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:padding="15dp"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="number"
        android:maxLength="3"
        android:gravity="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:text="@string/text_button_calcular"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@drawable/bg_gradient_button"/>

    <View
        android:id="@+id/container_result"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/container_result_ml"
        app:layout_constraintTop_toBottomOf="@id/bt_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>
    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toTopOf="@id/container_result"
        app:layout_constraintStart_toStartOf="@id/container_result"
        app:layout_constraintEnd_toEndOf="@id/container_result"
        app:layout_constraintBottom_toBottomOf="@id/container_result"
        android:textSize="35sp"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/bt_lembrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_lembrete"
        app:layout_constraintTop_toBottomOf="@id/container_result"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/dark_blue"
        />

    <Button
        android:id="@+id/bt_alarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_alarme"
        app:layout_constraintTop_toBottomOf="@id/container_result"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/dark_blue"
        />

    <TextView
        android:id="@+id/txt_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_hora"
        android:textSize="36sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/bt_lembrete"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        />
    <TextView
        android:id="@+id/txt_dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_dois_pontos"
        android:textSize="36sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/bt_lembrete"
        app:layout_constraintStart_toEndOf="@id/txt_hora"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/txt_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_min"
        android:textSize="36sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/bt_lembrete"
        app:layout_constraintStart_toEndOf="@id/txt_dois_pontos"
        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>